--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-streamlit>=1.22.0
-requests>=2.28.2
-pandas>=1.5.3
-plotly>=5.14.1
-xlsxwriter>=3.1.0
+streamlit==1.30.0
+requests==2.31.0
+pandas==2.1.3
+numpy==1.26.2
+plotly==5.18.0
+matplotlib==3.8.2
+seaborn==0.13.0
+pillow==10.1.0
+altair==5.1.2
+xlsxwriter==3.1.9
+python-dateutil==2.8.2
