--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,27 @@
-streamlit==1.30.0
-requests==2.31.0
-pandas==2.1.3
-numpy==1.26.2
-plotly==5.18.0
-matplotlib==3.8.2
-seaborn==0.13.0
-pillow==10.1.0
-altair==5.1.2
-xlsxwriter==3.1.9
-python-dateutil==2.8.2
-streamlit_calendar
-streamlit_option_menu
+streamlit>=1.22.0
+pandas>=1.5.3
+numpy>=1.24.3
+matplotlib>=3.7.1
+seaborn>=0.12.2
+plotly>=5.14.1
+requests>=2.29.0
+Pillow>=9.5.0
+altair>=5.0.1
+
+# Streamlit extensions
+streamlit-calendar>=0.3.0
+streamlit-option-menu>=0.3.2
+streamlit-lottie>=0.0.5
+streamlit-extras>=0.2.7
+
+# Data processing
+xlsxwriter>=3.1.0
+openpyxl>=3.1.2
+
+# Date and time handling
+python-dateutil>=2.8.2
+pytz>=2023.3
+
+# Optional: for development
+black>=23.3.0
+pytest>=7.3.1
