--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-# Core dependencies
-streamlit==1.45.0
-pandas>=1.5.3
-numpy>=1.24.3
-matplotlib>=3.7.1
-seaborn==0.13.2
-plotly>=5.14.1
-requests==2.32.3
-Pillow>=9.5.0
-altair>=5.0.1
+streamlit
+requests
+pandas
+numpy
+plotly
+matplotlib
+Pillow
+seaborn
+altair
 
 # Streamlit extensions
 streamlit-calendar>=0.3.0
